# icarus-plugin

./: CONTRIBUTING.md  README.md  __init__.py  export-training.py  export_training.py  fabric-retrieve.py  fabric_retrieve.py  fabric_schema.py  hooks.py  install.sh  maintain.py  obsidian.py  plugin.yaml  pyproject.toml  redaction.py  schemas.py  state.py  storage.py  tools.py  wiki.py  x.py
.github/workflows/: ci.yml
scripts/: smoke-handoff.sh  test-plugin.sh
tests/: test_export_redaction.py  test_fabric_schema.py  test_storage.py
