[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icarus-plugin"
version = "0.3.1"
description = "Self-memory and replacement models for Hermes agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "esaradev"}]
dependencies = [
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
icarus-export-training = "export_training:main"
icarus-fabric-retrieve = "fabric_retrieve:main"

[tool.setuptools]
py-modules = [
  "fabric_schema",
  "redaction",
  "storage",
  "export_training",
  "fabric_retrieve",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "training-data",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",  # keep plugin schema descriptions readable
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
